# yinyu

./: .env.example  .eslintrc  Cargo.toml  LICENSE  README.md  api.md  index.html  package-lock.json  package.json  playwright.config.ts  project.md  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: auto-rebase-all-prs.yml  auto-rebase.yml  ci-tests.yml  ci.yml  release.yml  tauri-build.yml
e2e/: navigation.spec.ts  search-playback-smoke.spec.ts
server/: README.md  aggregate.ts  index.test.ts  index.ts  mappings.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: AppShell.tsx  CapsuleNav.tsx  EmptyState.tsx  GlassPanel.tsx  LyricsView.tsx  MusicListItem.tsx  PageHeader.tsx  SectionCard.tsx  WaveProgress.tsx
src/features/player/: PlayerControls.tsx  PlayerStore.ts
src/features/player/api/: tuneProxyPlayer.ts
src/features/search/: SearchPage.tsx  types.ts
src/features/search/api/: tuneProxy.ts
src/features/search/utils/: dedupe.ts
src/hooks/: useMediaSession.ts  usePrefersReducedMotion.ts
src/i18n/: LocaleProvider.tsx  messages.ts
src/pages/: Charts.tsx  Home.tsx  PlayerPage.tsx  Settings.tsx
src/theme/: DynamicTheme.tsx  designTokens.ts
src/utils/: colorUtils.ts
test/: index.test.ts
tests/: dedupe.test.ts  lyrics-view.test.tsx  player-controls.test.tsx  search-page.integration.test.tsx  theme.test.ts  waveprogress.test.tsx
