[package]
name = "yinyu"
version = "0.1.0"
description = "Yinyu desktop app"
authors = ["yinyu"]
edition = "2021"
build = "src-tauri/build.rs"

[lib]
name = "yinyu_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yinyu"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
